[package]
name = "sigpipe"
version = "0.1.0"
edition = "2021"
description = "A single function call to reset SIGPIPE and fix `failed printing to stdout`"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.116"
