[package]
name = "sigpipe"
version = "0.1.1"
edition = "2021"
description = "A single function call to reset SIGPIPE and fix `failed printing to stdout`"
license = "MIT"

keywords = [
    "sigpipe",
    "broken-pipe",
    "signal",
    "stdout",
    "println",
]


categories = [
    "command-line-utilities"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
